--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>BlindBox</title>
 </head>
 <body>
-    <h1>BlindBox</h1>
+    <header>
+        <a href="#">BlindBox Vidros Temperados</a>
+        <nav class="menu">
+            <a href="#">WhatsApp</a>
+            <a href="#">Ligar Agora</a>
+            <a href="#">Ver Rotas</a>
+
+        </nav>
+    </header>
 </body>
 </html>
