--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>BlindBox</title>
+
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        <a href="#">BlindBox Vidros Temperados</a>
+        <a id="title" href="#">BlindBox Vidros Temperados</a>
         <nav class="menu">
-            <a href="#">WhatsApp</a>
-            <a href="#">Ligar Agora</a>
-            <a href="#">Ver Rotas</a>
+            <a href="#">
+                <i class='bx bxs-comment-dots'></i>
+                <span>WhatsApp</span>
+            </a>
+            <a href="#">
+                <i class='bx bxs-phone' style='color:#48487f' ></i>
+                <span>Ligar Agora</span>
+            </a>
+            
+            <a href="#">
+                <i class='bx bxs-map' style='color:#48487f' ></i>
+                <span>Ver Rotas</span>
+            </a>
 
         </nav>
     </header>
