refazendo o menu nav

--- a/index.html
+++ b/index.html
@@ -21,19 +21,14 @@
     <header>
         <a id="title" href="#">BlindBox Vidros Temperados</a>
         <nav class="menu">
-            <a href="#">
-                <i class='bx bxs-comment-dots'></i>
-                <span>WhatsApp</span>
-            </a>
-            <a href="#">
-                <i class='bx bxs-phone' style='color:#48487f' ></i>
-                <span>Ligar Agora</span>
-            </a>
+            <i id="message" class='bx bxs-comment-dots'></i>
+            <a href="#">WhatsApp</a>
+
+            <i id="phone" class='bx bxs-phone' style='color:#48487f' ></i>
+            <a href="#">Ligar Agora</a>
             
-            <a href="#">
-                <i class='bx bxs-map' style='color:#48487f' ></i>
-                <span>Ver Rotas</span>
-            </a>
+            <i id="routes" class='bx bxs-map' style='color:#48487f' ></i>
+            <a href="#">Ver Rotas</a>
 
         </nav>
     </header>
