--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header>
         <a id="title" href="#">BlindBox Vidros Temperados</a>
         <nav class="menu">
-            <i id="message" class='bx bxs-comment-dots'></i>
+            <!--<i id="message" class='bx bxs-comment-dots'></i>-->
             <a href="#">WhatsApp</a>
 
-            <i id="phone" class='bx bxs-phone' style='color:#48487f' ></i>
+            <!--<i id="phone" class='bx bxs-phone' style='color:#48487f' ></i>-->
             <a href="#">Ligar Agora</a>
             
-            <i id="routes" class='bx bxs-map' style='color:#48487f' ></i>
+            <!--<i id="routes" class='bx bxs-map' style='color:#48487f' ></i>-->
             <a href="#">Ver Rotas</a>
 
         </nav>
